adding different modes to demonstrate different methods

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,31 @@ target_include_directories(imgui_gradient PRIVATE 3rdParty/gprt/3rdParty/)
 
 embed_devicecode(
   OUTPUT_TARGET
-    deviceCode
+    deviceCodeCommon
   SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/deviceCode.hlsl
+    ${CMAKE_CURRENT_SOURCE_DIR}/deviceCodeCommon.hlsl
+)
+
+embed_devicecode(
+  OUTPUT_TARGET
+    deviceCodeSplat
+  SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/deviceCodeSplat.hlsl
+)
+
+embed_devicecode(
+  OUTPUT_TARGET
+    deviceCodeRBF
+  SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/deviceCodeRBF.hlsl
+)
+
+embed_devicecode(
+  OUTPUT_TARGET
+    deviceCodeRaster
+  SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/deviceCodeRaster.hlsl
 )
 
 add_executable(viewer hostCode.cpp)
-target_link_libraries(viewer PUBLIC deviceCode gprt::gprt imgui_gradient::imgui_gradient)
+target_link_libraries(viewer PUBLIC deviceCodeCommon deviceCodeSplat deviceCodeRBF deviceCodeRaster gprt::gprt imgui_gradient::imgui_gradient)
