blue noise is working now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ set(COMPILE_DEFINITIONS ${COMPILE_DEFINITIONS} -DGENERICIO)
 set(LIBRARIES ${LIBRARIES} genericio)
 endif()
 
+set(COMPILE_DEFINITIONS ${COMPILE_DEFINITIONS} -DSTBN_DIR="${CMAKE_CURRENT_SOURCE_DIR}/stbn/")
 find_package(TBB)
 
 if (${TBB_FOUND})
