Retrofit BVH construction & Fix typo on kdtreeBuilder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,8 @@ set(COMPILE_DEFINITIONS)
 
 add_executable(viewer hostCode.cpp)
 
-add_executable(kdTreeBuiler kdTreeBuilder.cpp memory.cpp)
+add_executable(kdTreeBuilder kdTreeBuilder.cpp memory.cpp)
+add_executable(bvhBuilder bvhBuilder.cpp memory.cpp)
 
 if (${BUILD_ARBORX})
 set(LIBRARIES ${LIBRARIES} ArborX::ArborX)
@@ -93,5 +94,8 @@ endif()
 target_link_libraries(viewer PUBLIC ${LIBRARIES})
 target_compile_definitions(viewer PUBLIC ${COMPILE_DEFINITIONS})
 
-target_link_libraries(kdTreeBuiler PUBLIC ${LIBRARIES})
-target_compile_definitions(kdTreeBuiler PUBLIC ${COMPILE_DEFINITIONS})
+target_link_libraries(kdTreeBuilder PUBLIC ${LIBRARIES})
+target_compile_definitions(kdTreeBuilder PUBLIC ${COMPILE_DEFINITIONS})
+
+target_link_libraries(bvhBuilder PUBLIC ${LIBRARIES})
+target_compile_definitions(bvhBuilder PUBLIC ${COMPILE_DEFINITIONS})
