--- a/scripts/benchmark/boiler.ini
+++ b/scripts/benchmark/boiler.ini
@@ -1,32 +1,33 @@
 [RayGenData]
-rbfRadius=6.87119e-05
-clampMaxCumulativeValue=1
-sigma=4
+rbfRadius=0.002035
+unit=0.01
+clampMaxCumulativeValue=11
+sigma=3
 power=0
-particlesPerLeaf=16
-ddaDimensions={64,64,64}
+particlesPerLeaf=1
+ddaDimensions={1,1,1}
 visualizeAttributes=1
 useDDA=1
 showHeatmap=0
 disableColorCorrection=0
-light.azimuth=0
-light.elevation=0
-light.ambient=0.5
-camera.pos={0.462079,-0.0618425,0.301718}
-camera.dir_00={-0.289674,1.01095,-0.334462}
-camera.dir_du={-0.0100764,0,0.659923}
-camera.dir_dv={-0.543748,-0.37399,-0.0083025}
+light.azimuth=0.597
+light.elevation=0.181
+light.ambient=0.168
+camera.pos={-0.0282692,0.591891,0.955294}
+camera.dir_00={0.473346,-0.677424,-0.664861}
+camera.dir_du={0.304019,0.396954,-0}
+camera.dir_dv={-0.321966,0.246587,-0.29246}
 spp=1
-exposure=1
-gamma=1
+exposure=1.92
+gamma=0.9
 
 [MissProgData]
 color0={0.1,0.1,0.1}
 color1={0,0,0}
 
 [Misc.]
-particleFrame=5
+particleFrame=10
 mode=1
-colormap="0:{0,0,0.34902,1};0.25:{0.27451,0.505882,0.639216,1};0.5:{0.980392,0.960784,0.905882,1};0.75:{0.764706,0.298039,0.215686,1};1:{0.34902,0.0705882,0.211765,1}"
-radiusmap="0:{0,0,0,0};1:{1,1,1,1}"
-densitymap="0:{0,0,0,0};1:{1,1,1,1}"
+colormap="0:{0,0,0,1};0.25:{0.54902,0,0,1};0.5:{0.901961,0.219608,0,1};0.75:{0.901961,0.788235,0,1};1:{1,1,1,1}"
+radiusmap="0:{1,1,1,1};1:{0.529,0.529,0.529,1}"
+densitymap="0:{0,0,0,1};0.80531:{1,1,1,1}"
