--- a/scripts/benchmark/injection_d50_Tin0.95.ini
+++ b/scripts/benchmark/injection_d50_Tin0.95.ini
@@ -1,32 +1,33 @@
 [RayGenData]
-rbfRadius=0.485823
-clampMaxCumulativeValue=1
-sigma=4
+rbfRadius=2.6
+unit=3
+clampMaxCumulativeValue=4
+sigma=3
 power=0
-particlesPerLeaf=16
-ddaDimensions={64,64,64}
+particlesPerLeaf=1
+ddaDimensions={1,1,1}
 visualizeAttributes=1
 useDDA=1
 showHeatmap=0
 disableColorCorrection=0
-light.azimuth=0
-light.elevation=0
-light.ambient=0.5
-camera.pos={417.201,127.661,26.3971}
-camera.dir_00={-1.07898,0.213557,-0.0894344}
-camera.dir_du={0.148555,0,0.643064}
-camera.dir_dv={0.07349,-0.655676,-0.0169771}
+light.azimuth=0.101
+light.elevation=-1
+light.ambient=0.393
+camera.pos={402.379,-160.992,-174.133}
+camera.dir_00={-0.65782,0.872793,0.152661}
+camera.dir_du={0.444347,-0,0.488012}
+camera.dir_dv={-0.298539,-0.522097,0.271827}
 spp=1
-exposure=1
-gamma=1
+exposure=2.0
+gamma=1.52
 
 [MissProgData]
 color0={0.1,0.1,0.1}
 color1={0,0,0}
 
 [Misc.]
-particleFrame=181
+particleFrame=265
 mode=1
-colormap="0:{0.231373,0.298039,0.752941,1};0.25:{0.545098,0.678431,0.992157,1};0.5:{0.854902,0.858824,0.858824,1};0.75:{0.94902,0.6,0.478431,1};1:{0.705882,0.0156863,0.14902,1}"
-radiusmap="0:{0,0,0,0};1:{1,1,1,1}"
-densitymap="0:{0,0,0,0};1:{1,1,1,1}"
+colormap="0.121469:{0.231373,0.298039,0.752941,1};0.1544:{0.545098,0.678431,0.992157,1};0.1897:{0.854902,0.858824,0.858824,1};0.2215:{0.94902,0.6,0.478431,1};0.2494:{0.705882,0.0156863,0.14902,1}"
+radiusmap="0:{1,1,1,1};0.810734:{1,1,1,1};1:{1,1,1,1}"
+densitymap="0:{0.471,0.471,0.471,1};1:{1,1,1,1}"
