updating gitmodules to use http

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "3rdParty/GPRT"]
 	path = 3rdParty/GPRT
-	url = git@github.com:gprt-org/GPRT.git
+	url = https://github.com/gprt-org/GPRT.git
 [submodule "3rdParty/imgui_gradient"]
 	path = 3rdParty/imgui_gradient
-	url = git@github.com:natevm/imgui_gradient.git
+	url = https://github.com/natevm/imgui_gradient.git
 [submodule "3rdParty/argparse"]
 	path = 3rdParty/argparse
-	url = git@github.com:p-ranav/argparse.git
+	url = https://github.com/p-ranav/argparse.git
